--- a/themes/gallery/layouts/_default/single_BAK.html
+++ b/themes/gallery/layouts/_default/single_BAK.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
   {{ partial "title.html" . }}
   {{ partial "gallery.html" . }}
+  {{ partial "related.html" . }}
   {{ with .Content }}
     <section class="prose">
       {{ . }}
